# RobotSim2

./: .gitignore  CONTRIBUTING.md  DEV_TOOLS.md  FIX_FREE_JOINTS.md  IMPROVEMENTS.md  LICENSE  MediumArticle.md  README.md  SUMMARY.md  pyproject.toml
python/: README.md  README_LEGACY.md  pyproject.toml
python/robotsim_py/: __init__.py  controller.py  main.py  rendering.py  robot.py
python/tests/: test_kinematics.py
robot_sim_py/: __init__.py  app.py  camera.py  controllers.py  gemini_agent.py  gemini_image_test.py  ogl_app.py  reachability.py  robot.py  scene.py  trajectory.py  viewer.py
robot_sim_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_free_wrist_reachability.py  test_gemini_agent.py  test_gemini_api_key.py  test_gemini_robotics_prompt.py  test_kinematics.py
