[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotsim-py"
version = "0.1.0"
description = "Modern Python reimplementation of the RobotSim 6-DOF arm simulator."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
robotsim-py = "robotsim_py.main:run"
